# CPP-CMake-Template

./: CMakeLists.txt  README.md
inc/: README.md
lib/: README.md
src/: CMakeLists.txt  main.cpp
